-
Bug
-
Resolution: Done
-
P2: Important
-
5.12.3
-
-
ef54abae43db79792b40dfdca30ac0fa1b582354 (qt/qtbase/5.13)
If an item is updated while the display is in sleep mode then when the display comes back from sleep it will not be updated. If the window is resized then it will update right away.
- relates to
-
QTBUG-75930 ANGLE: Qt Quick applications positioned through Aero snap don't redraw properly after repositioning from normal state
-
- Closed
-
- resulted in
-
QTBUG-81347 [REG->5.14] QWindowsContext::registerWindowClass can fail when the Qt libs are different versions
-
- Closed
-